[package]
name = "os"
version = "0.1.1"
authors = []
edition = "2018"

# The newest versions are described below, but they are not compatible with UltraOS's newest version.
# riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
# k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
# k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
# k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

[dependencies]
lazy_static = { path = "../dependency/lazy_static", features = ["spin_no_std"] }
buddy_system_allocator = { path = "../dependency/buddy_system_allocator" }
spin = { path = "../dependency/spin-0.7.1" }
bitflags = { path = "../dependency/bitflags" }
xmas-elf = { path = "../dependency/xmas-elf" }
simple-fat32 = { path = "../simple_fat32" }
embedded-hal = { path = "../dependency/embedded-hal" }
nb = "1.0.0"
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
virtio-drivers = { path = "../dependency/virtio-drivers" }
k210-pac = { path = "../dependency/k210-pac" }
k210-hal = { path = "../dependency/k210-hal" }
k210-soc = { path = "../dependency/k210-soc" }

[features]
board_qemu = []
board_k210 = []